--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="name">Name:</string>
     <string name="count">Count:</string>
     <string name="save">Save</string>
+    <string name="invalid_name">Invalid name</string>
+    <string name="invalid_count">Invalid count</string>
 </resources>
