--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="save">Save</string>
     <string name="invalid_name">Invalid name</string>
     <string name="invalid_count">Invalid count</string>
+    <string name="success">Success!</string>
 </resources>
